tweaked spacing resolve #44

--- a/web/public/css/darkvision.css
+++ b/web/public/css/darkvision.css
@@ -242,7 +242,9 @@ h3 {
 }
 
 h4 {
+  font-size: 16px;
   font-weight: 500;
+  margin-top: 10px;
   margin-bottom: 10px;
 }
 
@@ -261,11 +263,23 @@ h4 {
 
 .tag {
   display: inline-block;
-  padding: 4px;
-  margin: 4px;
+  padding: 5px;
+  margin-left: 0px;
+  margin-right: 10px;
+  margin-top: 0px;
+  margin-bottom: 10px;
   border-radius: 4px;
   font-size: 12px;
   outline: none;
+}
+
+.no-tag {
+  display: inline-block;
+  margin-left: 0px;
+  margin-right: 10px;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  font-size: 12px;
 }
 
 .tag a md-icon {
